# Eigent

./: .gitignore  .readthedocs.yaml  README.md  docker-compose.yml  docs-requirements.txt  eigent-report-20260331232501.html  mkdocs.yml
demo/: Dockerfile  README.md  demo-video-script.md  eigent-demo.ts  mock-mcp-server.ts  package-lock.json  package.json  run-demo.sh  tsconfig.json
deploy/helm/eigent/: Chart.yaml  values.yaml
deploy/helm/eigent/templates/: _helpers.tpl  configmap.yaml  dashboard-deployment.yaml  dashboard-service.yaml  ingress.yaml  pdb.yaml  registry-deployment.yaml  registry-service.yaml  secret.yaml
deploy/terraform/: README.md  main.tf
deploy/terraform/modules/eigent-agent/: main.tf
deploy/terraform/modules/eigent-policy/: main.tf
docs/: CNAME  api.html  compliance.html  concepts.html  how-it-works.html  index.html  quickstart.html
docs/blog/: launch.md
eigent-cli/: .gitignore  README.md  package-lock.json  package.json
eigent-cli/src/: api.ts  config.ts  display.ts  index.ts
eigent-cli/tests/: explain-trace.test.ts
eigent-core/: package-lock.json  package.json  tsconfig.json
eigent-core/src/: delegation.ts  index.ts  keys.ts  permissions.ts  revocation.ts  token.ts  types.ts
eigent-core/tests/: delegation.test.ts  helpers.ts  keys.test.ts  permissions.test.ts  revocation.test.ts  token.test.ts
eigent-dashboard/: .gitignore  Dockerfile  package.json
eigent-dashboard/prisma/: schema.prisma  seed.ts
eigent-dashboard/src/: middleware.ts
eigent-dashboard/src/app/: globals.css  layout.tsx  page.tsx
eigent-dashboard/src/app/agents/: agents-view.tsx  page.tsx
eigent-dashboard/src/components/: agent-detail.tsx  agents-table.tsx  audit-log.tsx  delegation-tree.tsx  findings-table.tsx  nav.tsx  risk-badge.tsx  stats-card.tsx
eigent-dashboard/src/lib/: auth.ts  registry.ts  types.ts
eigent-py/: README.md  pyproject.toml
eigent-py/src/eigent/: __init__.py  async_client.py  client.py  decorators.py  exceptions.py  models.py
eigent-py/src/eigent/integrations/: __init__.py  crewai.py  fastapi.py  langchain.py
eigent-py/tests/: test_async_client.py  test_client.py  test_crewai.py  test_fastapi.py  test_langchain.py
eigent-registry/: Dockerfile  README.md  package-lock.json  package.json
eigent-registry/src/: approval-notifier.ts  audit-integrity.ts  compliance-report.ts  crypto.ts  db-factory.ts  db-postgres.ts  db-sqlite.ts  db.ts  index.ts  lifecycle.ts  logger.ts  oidc.ts  openapi.ts  rate-limit.ts  scim.ts  server.ts  tokens.ts  webhooks.ts
eigent-registry/src/migrations/: 001-initial.sql
eigent-registry/tests/: approval-notifier.test.ts  approvals.test.ts  audit-integrity.test.ts  audit-verify-endpoint.test.ts  compliance-report.test.ts  lifecycle.test.ts  logger.test.ts  oidc.test.ts  phase2.test.ts  phase3-enterprise.test.ts  registry.test.ts  risk-classification.test.ts
eigent-scan/: .gitignore  LICENSE  README.md  action.yml  install.sh  pyproject.toml
eigent-scan/.github/workflows/: ci.yml  example-usage.yml
eigent-scan/npm/: index.js  package.json
eigent-scan/src/agentvault_scan/: __init__.py  cli.py  models.py  report.py
eigent-scan/src/agentvault_scan/scanners/: aws_scanner.py  mcp_scanner.py
eigent-scan/src/eigent_scan/: __init__.py  alerts.py  cli.py  compliance.py  config.py  diff.py  models.py  report.py  report_html.py  sarif.py  store.py
eigent-scan/src/eigent_scan/scanners/: __init__.py  aws_scanner.py  mcp_scanner.py  process_scanner.py
eigent-scan/tests/: test_alerts.py  test_diff.py  test_mcp_scanner.py  test_models.py  test_store.py
eigent-sidecar/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
eigent-sidecar/.eigent/: policy.yaml
eigent-sidecar/src/: auth.ts  decision-log.ts  enforcer.ts  http-proxy.ts  index.ts  interceptor.ts  parser.ts  policy-loader.ts  policy.ts  telemetry.ts
eigent-sidecar/tests/: auth.test.ts  decision-log.test.ts  enforcer.test.ts  http-proxy.test.ts  integration.test.ts  interceptor.test.ts  parser.test.ts  policy-enforcer-integration.test.ts  policy-loader.test.ts  policy.test.ts  telemetry.test.ts
mkdocs-docs/: index.md
mkdocs-docs/api/: cli.md  core.md  registry.md  sidecar.md
mkdocs-docs/architecture/: protocol.md  security.md  system-design.md
mkdocs-docs/compliance/: eu-ai-act.md  reports.md  soc2.md
mkdocs-docs/concepts/: audit.md  delegation.md  overview.md  permissions.md  revocation.md  tokens.md
mkdocs-docs/getting-started/: first-eigent.md  installation.md  quickstart.md
mkdocs-docs/guides/: cicd.md  claude-desktop.md  mcp-integration.md  multi-agent.md  siem.md
otel-mcp-convention/: CONTRIBUTING.md  README.md  mcp-attributes.md  mcp-metrics.md  mcp-spans.md
(+15 files in other folders)
