[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eigent"
version = "0.1.0"
description = "Python SDK for Eigent — AI agent identity, delegation, and compliance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eigent"]
