[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eigent"
version = "0.2.0"
description = "Python SDK for Eigent — AI agent identity, delegation, and compliance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.2,<1",
]
crewai = [
    "crewai>=0.30,<1",
]
fastapi = [
    "fastapi>=0.100",
    "starlette>=0.27",
]
all = [
    "eigent[langchain,crewai,fastapi]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "httpx[http2]>=0.27,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eigent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
