[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentvault-scan"
version = "0.1.0"
description = "Discover AI agents, their permissions, and security gaps across your environment"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "AgentVault", email = "hello@agentvault.dev" },
]
keywords = ["ai", "agents", "security", "scanner", "mcp", "llm", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
agentvault-scan = "agentvault_scan.cli:cli"

[project.urls]
Homepage = "https://github.com/agentvault/agentvault-scan"
Documentation = "https://docs.agentvault.dev"
Repository = "https://github.com/agentvault/agentvault-scan"
Issues = "https://github.com/agentvault/agentvault-scan/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentvault_scan"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
